se agregan mejoras a a los comentarios

--- a/src/app/demo/components/auth/login/login.component.scss
+++ b/src/app/demo/components/auth/login/login.component.scss
@@ -6,3 +6,9 @@
     width: 100%; // Ajusta el tamaño del div según sea necesario
     height: 100%; // Ajusta la altura del div según sea necesario
 }
+
+.title-udi {
+    color: white;
+    font-size: xxx-large;
+    font-weight: 700;
+}
