--- a/src/app/demo/components/pages/events-udi/events-udi.component.html
+++ b/src/app/demo/components/pages/events-udi/events-udi.component.html
@@ -313,7 +313,7 @@
                                         <b
                                             class="task-description"
                                             style="padding-top: 5px"
-                                            >Asignado a {{ task.user_name }}</b
+                                            >Asignado a {{ task.user.name + ' ' + task.user.surnames}}</b
                                         >
                                     </div>
                                     <div class="grid mr-2 ml-1 mt-1 mt-2">
