--- a/src/app/demo/components/pages/hotbed-tracking/hotbed-tracking.component.html
+++ b/src/app/demo/components/pages/hotbed-tracking/hotbed-tracking.component.html
@@ -253,10 +253,9 @@
                 </div>
             </div>
             <div class="card flex justify-content-center col-12">
-                <h4 class="font-bold">
-                    Título:
+                <h5 class="font-bold" style="font-family: revert; text-align: center;">
                     {{ articleSelected.title }}
-                </h4>
+                </h5>
             </div>
             <div *ngIf="!showEdit" class="grid col-12">
                 <div class="col-12">
