--- a/src/app/demo/components/auth/login/login.component.html
+++ b/src/app/demo/components/auth/login/login.component.html
@@ -1,29 +1,113 @@
-<div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden background-uch">
+<p-toast key="tst"></p-toast>
+<div
+    class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden background-uch"
+>
     <div class="flex flex-column align-items-center justify-content-center">
-        <img src="assets/img/ico-uch-dark.png" alt="logo uch" class="mb-5 w-6rem flex-shrink-0">                
-        <div style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
-            <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
+        <div class="grid d-flex">
+            <img
+                src="assets/img/ico-uch-dark.png"
+                alt="logo uch"
+                class="mb-5 w-6rem flex-shrink-0"
+            />
+            <h1 class="title-udi">UDI</h1>
+        </div>
+
+        <div
+            style="
+                border-radius: 56px;
+                padding: 0.3rem;
+                background: linear-gradient(
+                    180deg,
+                    var(--primary-color) 10%,
+                    rgba(33, 150, 243, 0) 30%
+                );
+            "
+        >
+            <div
+                class="w-full surface-card py-8 px-5 sm:px-8"
+                style="border-radius: 53px"
+            >
                 <!-- <div class="text-center mb-5">
                     <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
                     <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
                     <span class="text-600 font-medium">Sign in to continue</span>
                 </div> -->
+                <div>
+                    <div class="text-center text-900 text-3xl font-medium mb-4">
+                        Sistema de Gestión de Investigación
+                    </div>
+                </div>
 
                 <div>
-                    <label for="email1" class="block text-900 text-xl font-medium mb-2">Correo</label>
-                    <input id="email1" type="text" placeholder="Ingrese su correo" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <form [formGroup]="loginForm">
+                        <label
+                            for="email1"
+                            class="block text-900 text-xl font-medium mb-2"
+                            >Correo</label
+                        >
 
-                    <label for="password1" class="block text-900 font-medium text-xl mb-2">Password</label>
-                    <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true" styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
+                        <input
+                            id="email1"
+                            type="text"
+                            placeholder="Ingrese su correo"
+                            pInputText
+                            formControlName="email"
+                            class="w-full md:w-30rem mb-5"
+                            style="padding: 1rem"
+                        />
+                        <small
+                            class="pl-2 text-error mb-2"
+                            style="display: grid; margin-top: -20px"
+                            *ngIf="email.dirty && email.errors"
+                            >El correo es requerido.</small
+                        >
 
-                    <div class="flex align-items-center justify-content-between mb-5 gap-5">
-                        <div class="flex align-items-center">
-                            <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-                            <label for="rememberme1">Recordarme</label>
+                        <label
+                            for="password1"
+                            class="block text-900 font-medium text-xl mb-2"
+                            >Password</label
+                        >
+                        <p-password
+                            id="password1"
+                            placeholder="Password"
+                            formControlName="password"
+                            [toggleMask]="true"
+                            styleClass="mb-5"
+                            inputStyleClass="w-full p-3 md:w-30rem"
+                            [feedback]="false"
+                        ></p-password>
+                        <small
+                            class="pl-2 text-error mb-2"
+                            style="display: grid; margin-top: -20px"ng
+                            *ngIf="password.dirty && password.errors"
+                            >Debe ingresar una contraseña.</small
+                        >
+
+                        <div
+                            class="flex align-items-center justify-content-between mb-5 gap-5"
+                        >
+                            <div class="flex align-items-center">
+                                <p-checkbox
+                                    id="rememberme1"
+                                    [binary]="true"
+                                    styleClass="mr-2"
+                                ></p-checkbox>
+                                <label for="rememberme1">Recordarme</label>
+                            </div>
+                            <a
+                                class="font-medium no-underline ml-2 text-right cursor-pointer"
+                                style="color: var(--primary-color)"
+                                >Olvidaste tu clave?</a
+                            >
                         </div>
-                        <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Olvidaste tu clave?</a>
-                    </div>
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                        <button
+                            pButton
+                            pRipple
+                            label="Ingresar"
+                            class="w-full p-3 text-xl"
+                            (click)="callToLogin()"
+                        ></button>
+                    </form>
                 </div>
             </div>
         </div>
