--- a/src/app/layout/app.menu.component.html
+++ b/src/app/layout/app.menu.component.html
@@ -1,7 +1,29 @@
+<style>
+    .footer {
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+    }
+</style>
 <ul class="layout-menu">
-    <ng-container *ngFor="let item of model; let i = index;">
-        <li app-menuitem *ngIf="!item.separator" [item]="item" [index]="i" [root]="true"></li>
+    <ng-container *ngFor="let item of model; let i = index">
+        <li
+            app-menuitem
+            *ngIf="!item.separator"
+            [item]="item"
+            [index]="i"
+            [root]="true"
+        ></li>
         <li *ngIf="item.separator" class="menu-separator"></li>
     </ng-container>
-    
+    <li class="footer">
+        <div class="grid d-flex justify-content-center">
+            <div class="col-2">
+                <p-avatar [label]="getInitialName()" styleClass="mr-2" size="large" />
+            </div>
+            <div class="col-10 align-content-center">
+                <p>{{getUserFullName()}}</p>
+            </div>
+        </div>
+    </li>
 </ul>
